[package]
name = "mdbook-vi-mode"
version = "0.1.0"
edition = "2024"
authors = ["T. Sawyer <saylesss87@proton.me>"]
license = "Apache-2.0"
repository = "https://github.com/saylesss88/mdbook-vi-mode"
homepage = "https://github.com/saylesss88/mdbook-vi-mode"
description = "An mdBook preprocessor that adds Vim-style keyboard navigation to the rendered HTML book"
readme = "README.md"
documentation = "https://docs.rs/mdbook-vi-mode"
keywords = ["mdbook", "navigation"]
categories = ["command-line-utilities"]
exclude = [".github", "tests/", "benches/", "assets/"]

[dependencies]
clap = "4.6.1"
mdbook-preprocessor = "0.5.4"
semver = "1.0.28"
serde = {version = "1.0.228", default-features = false}
serde_json = "1.0.150"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
future_incompatible = {level = "warn", priority = -1}
nonstandard_style = {level = "warn", priority = -1}
rust_2018_idioms = {level = "warn", priority = -1}

[lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
all = {level = "warn", priority = -1}
pedantic = {level = "warn", priority = -1}
todo = "warn"
dbg_macro = "warn"
unwrap_used = "warn"
# expect_used = "warn"
